--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.11",
+    "@zeit/ncc": "^0.22.3",
     "ts-node": "^8.10.2",
     "ttypescript": "^1.5.10",
     "typescript": "^3.9.5"
