--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         push-branch: '{branch}-release'
 
-  test:
+  test_saving:
     runs-on: ubuntu-latest
     needs:
     - build_and_push
@@ -47,6 +47,29 @@ jobs:
     - uses: ./action-dlc
       with:
         repotag: amazon/aws-cli
-        key: aws-cli-docker-image
+        key: aws-cli-docker-image-sha:${{ github.sha }}
+
+    - run: docker pull amazon/aws-cli
+
+  test_restoring:
+    runs-on: ubuntu-latest
+    needs:
+    - test_saving
+
+    steps:
+    - name: Extract
+      id: extract
+      run: |
+        echo "##[set-output name=branch;]${GITHUB_REF#refs/heads/}"
+
+    - uses: actions/checkout@v2
+      with:
+        ref: ${{ steps.extract.outputs.branch }}-release
+        path: action-dlc
+
+    - uses: ./action-dlc
+      with:
+        repotag: amazon/aws-cli
+        key: aws-cli-docker-image-sha:${{ github.sha }}
 
     - run: docker pull amazon/aws-cli
