--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
     - uses: ./action-dlc
       with:
         repotag: amazon/aws-cli
-        key: aws-cli-docker-image-sha:${{ github.sha }}
+        key: aws-cli-docker-image-sha-${{ github.sha }}
 
     - run: docker pull amazon/aws-cli
   
@@ -62,7 +62,7 @@ jobs:
     - uses: actions/cache@v2
       with:
         path: './root-cache'
-        key: aws-cli-docker-image-sha:${{ github.sha }}-root
+        key: aws-cli-docker-image-sha-${{ github.sha }}-root
     - run: ls ./root-cache
 
   test_restoring:
@@ -86,6 +86,6 @@ jobs:
     - uses: ./action-dlc
       with:
         repotag: amazon/aws-cli
-        key: aws-cli-docker-image-sha:${{ github.sha }}
+        key: aws-cli-docker-image-sha-${{ github.sha }}
 
     - run: docker pull amazon/aws-cli
