--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,8 @@ jobs:
       with:
         repotag: amazon/aws-cli
         key: aws-cli-docker-image-sha-${{ github.sha }}
-    - run: docker pull amazon/aws-cli
+
+    - run: docker run --rm amazon/aws-cli --version
 
   test_restoring:
     runs-on: ubuntu-latest
