--- a/.github/workflows/test_readme.yml
+++ b/.github/workflows/test_readme.yml
@@ -1,4 +1,4 @@
-name: README sample test 
+name: README sample test
 
 on: push
 
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v2
     - uses: satackey/action-docker-layer-caching@v0.0
       with:
-        repotag: amazon/aws-cli
-        key: aws-cli-docker-image
+        repotag: test_project_node
+        key: docker-compose-node-image-${{ hashFiles('yarn.lock') }}
 
-    - run: docker pull amazon/aws-cli
-    - run: docker run --rm amazon/aws-cli --version
+    - run: docker-compose -f test_project/docker-compose.yml -p test_project build
