--- a/.github/workflows/test_readme.yml
+++ b/.github/workflows/test_readme.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: satackey/action-docker-layer-caching@v0.0
       with:
         repotag: test_project_node
-        key: docker-compose-node-image-${{ hashFiles('yarn.lock') }}
+        key: docker-compose-node-image-${{ hashFiles('yarn.lock') }}-${{ hashFiles('test_project/**') }}
 
     - run: docker image ls
 
