--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,8 +54,8 @@ jobs:
     - uses: ./action-dlc
       name: Run satackey/action-docker-layer-caching@${{ steps.extract.outputs.branch }}
       with:
-        repotag: test_project_node
-        key: docker-layer-caching-test_project_node-sha:${{ github.sha }}
+        key: docker-layer-caching-test_project_node-sha:${{ github.sha }}-{hash}
+        restore-keys: docker-layer-caching-test_project_node-sha:${{ github.sha }}-
 
     - run: docker-compose -f test_project/docker-compose.yml -p test_project build
 
@@ -81,8 +81,9 @@ jobs:
     - uses: ./action-dlc
       name: Run satackey/action-docker-layer-caching@${{ steps.extract.outputs.branch }}
       with:
-        repotag: test_project_node
-        key: docker-layer-caching-test_project_node-sha:${{ github.sha }}
+        # repotag: test_project_node
+        key: docker-layer-caching-test_project_node-sha:${{ github.sha }}-{hash}
+        restore-keys: docker-layer-caching-test_project_node-sha:${{ github.sha }}-
 
     - name: Show cached image info
       run: docker inspect test_project_node
@@ -132,8 +133,8 @@ jobs:
     - uses: ./action-dlc
       name: Run satackey/action-docker-layer-caching@${{ steps.extract.outputs.branch }}
       with:
-        repotag: amazon/aws-cli
-        key: docker-layer-caching-aws-cli-sha:${{ github.sha }}
+        key: docker-layer-caching-aws-cli-sha:${{ github.sha }}-{hash}
+        restore-keys: docker-layer-caching-aws-cli-sha:${{ github.sha }}-
 
     - run: docker run --rm amazon/aws-cli --version
 
@@ -157,8 +158,8 @@ jobs:
     - uses: ./action-dlc
       name: Run satackey/action-docker-layer-caching@${{ steps.extract.outputs.branch }}
       with:
-        repotag: amazon/aws-cli
-        key: docker-layer-caching-aws-cli-sha:${{ github.sha }}
+        key: docker-layer-caching-aws-cli-sha:${{ github.sha }}-{hash}
+        restore-keys: docker-layer-caching-aws-cli-sha:${{ github.sha }}-
 
     - name: Show cached image info
       run: docker inspect amazon/aws-cli
