--- a/.github/workflows/test_readme.yml
+++ b/.github/workflows/test_readme.yml
@@ -5,23 +5,40 @@ on:
     branches:
     - '**'
     tags:
-    - 'v0.o'
+    - 'v0.0'
     paths:
     - /.github/workflow/test_readme.yml
-    
 
 jobs:
-  build:
+  no_cache_build:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
     - uses: satackey/action-docker-layer-caching@v0.0
-      with:
-        repotag: test_project_node
-        key: docker-compose-node-image-${{ hashFiles('yarn.lock') }}-${{ hashFiles('test_project/**') }}
+    - run: docker-compose -f test_project/docker-compose.yml -p test_project build
 
-    - run: docker image ls
-    - run: ls -al
+  cached_build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: satackey/action-docker-layer-caching@v0.0
+
+    - name: Get cached image ID
+      run: echo ::set-output name=id::$(docker image ls -q test_project_node)
+      id: cached
 
     - run: docker-compose -f test_project/docker-compose.yml -p test_project build
+
+    - name: Show built image ID
+      run: echo ::set-output name=id::$(docker image ls -q test_project_node)
+      id: latest
+
+    - name: Compare cached ID and after build ID
+      run: |
+        if [ ! '${{ steps.cached.outputs.id }}' = '${{ steps.latest.outputs.id }}' ];then
+          echo cached != latest
+          exit 1
+        fi
+
