--- a/.github/workflows/test_readme.yml
+++ b/.github/workflows/test_readme.yml
@@ -1,13 +1,12 @@
 name: README sample test
 
 on:
-  push:
+  push: 
     branches:
-    - '**'
-    tags:
-    - v0.0
-    paths:
-    - .github/workflows/test_readme.yml
+    - master
+  schedule:
+  - cron: 0 0 */3 * *
+
 jobs:
   no_cache_build:
     runs-on: ubuntu-latest
@@ -15,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: satackey/action-docker-layer-caching@v0.0
-    - run: docker-compose -f test_project/docker-compose.yml -p test_project build
+    - run: docker-compose -f test_project/docker-compose.yml -p test_project build --no-cache
 
   cached_build:
     runs-on: ubuntu-latest
