--- a/.github/workflows/test_readme.yml
+++ b/.github/workflows/test_readme.yml
@@ -15,6 +15,9 @@ jobs:
     - uses: actions/checkout@v2
     - run: docker-compose -f test_project/docker-compose.yml -p test_project pull
     - uses: satackey/action-docker-layer-caching@v0.0
+      with:
+        key: docker-layer-caching-${{ github.workflow }}-${{ github.event_name }}-{hash}
+        restore-keys: docker-layer-caching-${{ github.workflow }}-${{ github.event_name }}-
     - run: docker rmi $(docker image ls -q)
     - run: docker-compose -f test_project/docker-compose.yml -p test_project build --no-cache
 
