--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
     - '**'
+  pull_request:
   delete:
 
 jobs:
@@ -16,10 +17,25 @@ jobs:
         node-version: 12.x
 
     - uses: actions/checkout@v2
+    
+    - name: Output info
+      id: info
+      run: |
+        if [ '${{ github.event_name }}' = 'pull_request' ]; then
+          echo '::set-output name=commit_message::'
+          exit 0
+        fi
+        echo '::set-output name=commit_message::[auto]'
 
     - uses: satackey/push-prebuilt-action@v0.2.0-beta3
       with:
+        commit-message: ${{ steps.info.outputs.commit_message }}
         push-branch: '{branch}-release'
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: built
+        path: ./
 
   # 
   # test built image caching
@@ -37,11 +53,11 @@ jobs:
       id: extract
       run: |
         echo "##[set-output name=branch;]${GITHUB_REF#refs/heads/}"
-
-    - uses: actions/checkout@v2
-      name: Pull action
+    
+    - name: Download action
+      uses: actions/download-artifact@v2
       with:
-        ref: ${{ steps.extract.outputs.branch }}-release
+        name: built
         path: action-dlc
 
     - uses: ./action-dlc
@@ -66,10 +82,10 @@ jobs:
       run: |
         echo "##[set-output name=branch;]${GITHUB_REF#refs/heads/}"
 
-    - uses: actions/checkout@v2
-      name: Pull action
+    - name: Download action
+      uses: actions/download-artifact@v2
       with:
-        ref: ${{ steps.extract.outputs.branch }}-release
+        name: built
         path: action-dlc
 
     - uses: ./action-dlc
@@ -115,10 +131,10 @@ jobs:
       run: |
         echo "##[set-output name=branch;]${GITHUB_REF#refs/heads/}"
 
-    - uses: actions/checkout@v2
-      name: Pull action
+    - name: Download action
+      uses: actions/download-artifact@v2
       with:
-        ref: ${{ steps.extract.outputs.branch }}-release
+        name: built
         path: action-dlc
 
     - uses: ./action-dlc
@@ -140,10 +156,10 @@ jobs:
       run: |
         echo "##[set-output name=branch;]${GITHUB_REF#refs/heads/}"
 
-    - uses: actions/checkout@v2
-      name: Pull action
+    - name: Download action
+      uses: actions/download-artifact@v2
       with:
-        ref: ${{ steps.extract.outputs.branch }}-release
+        name: built
         path: action-dlc
 
     - uses: ./action-dlc
