--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,8 +42,7 @@ jobs:
 
   test_saving_built:
     runs-on: ubuntu-latest
-    needs:
-    - build_and_push
+    needs: build
 
     steps:
     - uses: actions/checkout@v2
@@ -70,8 +69,7 @@ jobs:
 
   test_restoring_built:
     runs-on: ubuntu-latest
-    needs:
-    - test_saving_built
+    needs: test_saving_built
 
     steps:
     - uses: actions/checkout@v2
@@ -122,8 +120,7 @@ jobs:
 
   test_saving_pulled:
     runs-on: ubuntu-latest
-    needs:
-    - build_and_push
+    needs: build
 
     steps:
     - name: Extract
@@ -147,8 +144,7 @@ jobs:
 
   test_restoring_pulled:
     runs-on: ubuntu-latest
-    needs:
-    - test_saving_pulled
+    needs: test_saving_pulled
 
     steps:
     - name: Extract
