--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
         push-branch: '{branch}-release'
 
     - uses: actions/upload-artifact@v2
+      if: github.event_name != 'delete'
       with:
         name: built
         path: ./
@@ -43,6 +44,7 @@ jobs:
   test_saving_built:
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name != 'delete'
 
     steps:
     - uses: actions/checkout@v2
@@ -121,6 +123,7 @@ jobs:
   test_saving_pulled:
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name != 'delete'
 
     steps:
     - name: Extract
