--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,14 +41,27 @@ jobs:
   # 
   # test built image caching
 
-  test_saving_built:
+  test_saving:
+    strategy:
+      matrix: 
+        inspect_image:
+        - test_project_node
+        - amazon/aws-cli
+        include:
+        - inspect_image: test_project_node
+          prepare_command: docker-compose -f test_project/docker-compose.yml -p test_project pull
+          build_command: docker-compose -f test_project/docker-compose.yml -p test_project build
+        - inspect_image: amazon/aws-cli
+          prepare_command: echo
+          build_command: docker pull amazon/aws-cli
+
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name != 'delete'
 
     steps:
     - uses: actions/checkout@v2
-    - run: docker-compose -f test_project/docker-compose.yml -p test_project pull
+    - run: ${{ matrix.prepare_command }}
 
     - name: Extract
       id: extract
@@ -64,18 +77,32 @@ jobs:
     - uses: ./action-dlc
       name: Run satackey/action-docker-layer-caching@${{ steps.extract.outputs.branch }}
       with:
-        key: docker-layer-caching-test_project_node-sha:${{ github.sha }}-{hash}
-        restore-keys: docker-layer-caching-test_project_node-sha:${{ github.sha }}-
+        key: docker-layer-caching-${{ matrix.inspect_image }}-sha:${{ github.sha }}-{hash}
+        restore-keys: docker-layer-caching-${{ matrix.inspect_image }}-sha:${{ github.sha }}-
 
-    - run: docker-compose -f test_project/docker-compose.yml -p test_project build
+    - run: ${{ matrix.build_command }}
 
-  test_restoring_built:
+  test_restoring:
+    strategy:
+      matrix: 
+        inspect_image:
+        - test_project_node
+        - amazon/aws-cli
+        include:
+        - inspect_image: test_project_node
+          prepare_command: docker-compose -f test_project/docker-compose.yml -p test_project pull
+          build_command: docker-compose -f test_project/docker-compose.yml -p test_project build
+        - inspect_image: amazon/aws-cli
+          prepare_command: echo
+          build_command: docker pull amazon/aws-cli
+
     runs-on: ubuntu-latest
-    needs: test_saving_built
+    needs: test_saving
 
     steps:
     - uses: actions/checkout@v2
-    - run: docker-compose -f test_project/docker-compose.yml -p test_project pull
+
+    - run: ${{ matrix.prepare_command }}
 
     - name: Extract
       id: extract
@@ -91,96 +118,23 @@ jobs:
     - uses: ./action-dlc
       name: Run satackey/action-docker-layer-caching@${{ steps.extract.outputs.branch }}
       with:
-        key: docker-layer-caching-test_project_node-sha:${{ github.sha }}-{hash}
-        restore-keys: docker-layer-caching-test_project_node-sha:${{ github.sha }}-
+        key: docker-layer-caching-${{ matrix.inspect_image }}-sha:${{ github.sha }}-{hash}
+        restore-keys: docker-layer-caching-${{ matrix.inspect_image }}-sha:${{ github.sha }}-
 
     - name: Show cached image info
-      run: docker inspect test_project_node
+      run: docker inspect ${{ matrix.inspect_image }}
 
     - name: Get cached image ID
-      run: echo ::set-output name=id::$(docker image ls -q test_project_node)
+      run: echo ::set-output name=id::$(docker image ls -q ${{ matrix.inspect_image }})
       id: cached
 
-    - run: docker-compose -f test_project/docker-compose.yml -p test_project build
+    - run: ${{ matrix.build_command }}
 
     - name: Show built image info
-      run: docker inspect test_project_node
+      run: docker inspect ${{ matrix.inspect_image }}
 
     - name: Show built image ID
-      run: echo ::set-output name=id::$(docker image ls -q test_project_node)
-      id: latest
-
-    - name: Compare cached ID and after build ID
-      run: |
-        if [ ! '${{ steps.cached.outputs.id }}' = '${{ steps.latest.outputs.id }}' ];then
-          echo cached != latest
-          exit 1
-        fi
-
-  # 
-  # test pulled image caching
-
-  test_saving_pulled:
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.event_name != 'delete'
-
-    steps:
-    - name: Extract
-      id: extract
-      run: |
-        echo "##[set-output name=branch;]${GITHUB_REF#refs/heads/}"
-
-    - name: Download action
-      uses: actions/download-artifact@v2
-      with:
-        name: built
-        path: action-dlc
-
-    - uses: ./action-dlc
-      name: Run satackey/action-docker-layer-caching@${{ steps.extract.outputs.branch }}
-      with:
-        key: docker-layer-caching-aws-cli-sha:${{ github.sha }}-{hash}
-        restore-keys: docker-layer-caching-aws-cli-sha:${{ github.sha }}-
-
-    - run: docker run --rm amazon/aws-cli --version
-
-  test_restoring_pulled:
-    runs-on: ubuntu-latest
-    needs: test_saving_pulled
-
-    steps:
-    - name: Extract
-      id: extract
-      run: |
-        echo "##[set-output name=branch;]${GITHUB_REF#refs/heads/}"
-
-    - name: Download action
-      uses: actions/download-artifact@v2
-      with:
-        name: built
-        path: action-dlc
-
-    - uses: ./action-dlc
-      name: Run satackey/action-docker-layer-caching@${{ steps.extract.outputs.branch }}
-      with:
-        key: docker-layer-caching-aws-cli-sha:${{ github.sha }}-{hash}
-        restore-keys: docker-layer-caching-aws-cli-sha:${{ github.sha }}-
-
-    - name: Show cached image info
-      run: docker inspect amazon/aws-cli
-
-    - name: Get cached image ID
-      run: echo ::set-output name=id::$(docker image ls -q amazon/aws-cli)
-      id: cached
-
-    - run: docker pull amazon/aws-cli
-
-    - name: Show built image info
-      run: docker inspect amazon/aws-cli
-
-    - name: Show built image ID
-      run: echo ::set-output name=id::$(docker image ls -q amazon/aws-cli)
+      run: echo ::set-output name=id::$(docker image ls -q ${{ matrix.inspect_image }})
       id: latest
 
     - name: Compare cached ID and after build ID
