--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,29 +38,42 @@ jobs:
         name: built
         path: ./
 
-  # 
-  # test built image caching
+    - name: Output matrix
+      id: set_matrix
+      uses: actions/github-script@v2
+      with:
+        script: |
+          return {
+            inspect_image: [
+              'test_project_node',
+              'amazon/aws-cli'
+            ],
+            include: [
+              {
+                inspect_image: 'test_project_node'
+                prepare_command: 'docker-compose -f test_project/docker-compose.yml -p test_project pull'
+                build_command: 'docker-compose -f test_project/docker-compose.yml -p test_project build'
+              }, {
+                inspect_image: 'amazon/aws-cli'
+                prepare_command: 'echo'
+                build_command: 'docker pull amazon/aws-cli'
+              }
+            ]
+          }
+
+    outputs:
+      matrix: ${{ steps.set_matrix.outputs.result }}
 
   test_saving:
-    strategy:
-      matrix: 
-        inspect_image:
-        - test_project_node
-        - amazon/aws-cli
-        include:
-        - inspect_image: test_project_node
-          prepare_command: docker-compose -f test_project/docker-compose.yml -p test_project pull
-          build_command: docker-compose -f test_project/docker-compose.yml -p test_project build
-        - inspect_image: amazon/aws-cli
-          prepare_command: echo
-          build_command: docker pull amazon/aws-cli
-
-    runs-on: ubuntu-latest
-    needs: build
     if: github.event_name != 'delete'
+    needs: build
+    strategy:
+      matrix: ${{ needs.build.outputs.matrix }}
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
+
     - run: ${{ matrix.prepare_command }}
 
     - name: Extract
@@ -83,22 +96,10 @@ jobs:
     - run: ${{ matrix.build_command }}
 
   test_restoring:
-    strategy:
-      matrix: 
-        inspect_image:
-        - test_project_node
-        - amazon/aws-cli
-        include:
-        - inspect_image: test_project_node
-          prepare_command: docker-compose -f test_project/docker-compose.yml -p test_project pull
-          build_command: docker-compose -f test_project/docker-compose.yml -p test_project build
-        - inspect_image: amazon/aws-cli
-          prepare_command: echo
-          build_command: docker pull amazon/aws-cli
-
-    runs-on: ubuntu-latest
     needs: test_saving
-
+    strategy:
+      matrix: ${{ needs.build.outputs.matrix }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
 
