--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,19 +46,19 @@ jobs:
           return {
             inspect_image: [
               'test_project_node',
-              'amazon/aws-cli'
+              'amazon/aws-cli',
             ],
             include: [
               {
-                inspect_image: 'test_project_node'
-                prepare_command: 'docker-compose -f test_project/docker-compose.yml -p test_project pull'
-                build_command: 'docker-compose -f test_project/docker-compose.yml -p test_project build'
+                inspect_image: 'test_project_node',
+                prepare_command: 'docker-compose -f test_project/docker-compose.yml -p test_project pull',
+                build_command: 'docker-compose -f test_project/docker-compose.yml -p test_project build',
               }, {
-                inspect_image: 'amazon/aws-cli'
-                prepare_command: 'echo'
-                build_command: 'docker pull amazon/aws-cli'
-              }
-            ]
+                inspect_image: 'amazon/aws-cli',
+                prepare_command: 'echo',
+                build_command: 'docker pull amazon/aws-cli',
+              },
+            ],
           }
 
     outputs:
