--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@actions/core": "^1.2.4",
     "actions-exec-listener": "^0.0.2",
     "crypto": "^1.0.1",
+    "native-promise-pool": "^3.13.0",
     "string-format": "^2.0.0",
     "typescript-is": "^0.16.3"
   },
