Add digest images to the test

--- a/test_project/docker-compose.yml
+++ b/test_project/docker-compose.yml
@@ -1,9 +1,15 @@
 version: '3'
 
 services:
-  node:
+  tag_node:
     build:
       context: ../
-      dockerfile: ./test_project/Dockerfile
+      dockerfile: ./test_project/tag/Dockerfile
+
+  digest_node:
+    build:
+      context: ../
+      dockerfile: ./test_project/digest/Dockerfile
+
   mysql_pull_only:
     image: mysql:8.0
