--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,13 @@ jobs:
               'test_project_scratch',
               'hello-world',
             ],
+            os: [
+              'ubuntu-latest',
+              'windows-latest',
+            ],
+            branch: [
+              context.payload.ref.replace('refs/heads/', '')
+            ],
             include: [
               {
                 inspect_image: 'test_project_scratch',
@@ -69,18 +76,13 @@ jobs:
     needs: build
     strategy:
       matrix: ${{ fromJSON(needs.build.outputs.matrix) }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
 
     - run: ${{ matrix.prepare_command }}
 
-    - name: Extract
-      id: extract
-      run: |
-        echo "##[set-output name=branch;]${GITHUB_REF#refs/heads/}"
-    
     - name: Download action
       uses: actions/download-artifact@v2
       with:
@@ -88,7 +90,7 @@ jobs:
         path: action-dlc
 
     - uses: ./action-dlc
-      name: Run satackey/action-docker-layer-caching@${{ steps.extract.outputs.branch }}
+      name: Run satackey/action-docker-layer-caching@${{ matrix.branch }}
       with:
         key: docker-layer-caching-${{ matrix.inspect_image }}-sha:${{ github.sha }}-{hash}
 
@@ -98,7 +100,7 @@ jobs:
     needs: [build, test_saving]
     strategy:
       matrix: ${{ fromJSON(needs.build.outputs.matrix) }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
 
@@ -116,7 +118,7 @@ jobs:
         path: action-dlc
 
     - uses: ./action-dlc
-      name: Run satackey/action-docker-layer-caching@${{ steps.extract.outputs.branch }}
+      name: Run satackey/action-docker-layer-caching@${{ matrix.branch }}
       with:
         key: never-restored-docker-layer-caching-${{ matrix.inspect_image }}-sha:${{ github.sha }}-{hash}
         restore-keys: docker-layer-caching-${{ matrix.inspect_image }}-sha:${{ github.sha }}-
