--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,7 +68,13 @@ jobs:
                 build_command: 'docker pull hello-world',
               }, {
                 inspect_image: 'nothing',
+                os: 'ubuntu-latest',
                 prepare_command: 'docker tag node:12 nothing',
+                build_command: ':',
+              }, {
+                inspect_image: 'nothing',
+                os: 'windows-latest',
+                prepare_command: 'docker tag mcr.microsoft.com/windows/nanoserver:1809 nothing',
                 build_command: ':',
               }, {
                 branch: process.env.GITHUB_REF.replace('refs/heads/', '')
