--- a/.github/workflows/test_readme.yml
+++ b/.github/workflows/test_readme.yml
@@ -7,46 +7,113 @@ on:
   schedule:
   - cron: 0 0 */3 * *
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
-  no_cache_build:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - run: docker image ls -q | xargs docker rmi
-    - uses: actions/checkout@v2
-    - run: docker-compose -f test_project/docker-compose.yml -p test_project pull
-
-    - uses: satackey/action-docker-layer-caching@v0.0.8
+    - name: Output matrix
+      id: set_matrix
+      uses: actions/github-script@v2
       with:
-        key: docker-layer-caching-${{ github.workflow }}-${{ github.event_name }}-{hash}
-        restore-keys: docker-layer-caching-${{ github.workflow }}-${{ github.event_name }}-
+        script: |
+          return {
+            inspect_image: [
+              'test_project_scratch',
+              'hello-world',
+              'nothing'
+            ],
+            os: [
+              'ubuntu-latest',
+              'windows-latest',
+            ],
+            include: [
+              {
+                inspect_image: 'test_project_scratch',
+                prepare_command: 'docker-compose -f test_project/docker-compose.yml -p test_project pull',
+                build_command: 'docker-compose -f test_project/docker-compose.yml -p test_project build',
+              }, {
+                inspect_image: 'hello-world',
+                prepare_command: ':',
+                build_command: 'docker pull hello-world',
+              }, {
+                inspect_image: 'nothing',
+                os: 'ubuntu-latest',
+                prepare_command: 'docker tag node:12 nothing',
+                build_command: ':',
+              }, {
+                inspect_image: 'nothing',
+                os: 'windows-latest',
+                prepare_command: 'docker tag mcr.microsoft.com/windows/nanoserver:1809 nothing',
+                build_command: ':',
+              }, {
+                branch: process.env.GITHUB_REF.replace('refs/heads/', '')
+              }
+            ],
+            exclude: [
+              {
+                inspect_image: 'test_project_scratch',
+                os: 'windows-latest',
+              },
+            ],
+          }
 
-    - run: docker image ls -q | xargs docker rmi
-    - run: docker-compose -f test_project/docker-compose.yml -p test_project build --no-cache
+    outputs:
+      matrix: ${{ steps.set_matrix.outputs.result }}
 
-  cached_build:
-    runs-on: ubuntu-latest
-    needs:
-    - no_cache_build
+  test_saving:
+    if: github.event_name != 'delete'
+    needs: build
+    strategy:
+      matrix: ${{ fromJSON(needs.build.outputs.matrix) }}
+    runs-on: ${{ matrix.os }}
 
     steps:
-    - run: docker image ls -q | xargs docker rmi
     - uses: actions/checkout@v2
-    - run: docker-compose -f test_project/docker-compose.yml -p test_project pull
 
-    - uses: satackey/action-docker-layer-caching@v0.0.8
+    - run: ${{ matrix.prepare_command }}
+
+    - uses: satackey/action-docker-layer-caching@master-release
       with:
-        key: docker-layer-caching-${{ github.workflow }}-${{ github.event_name }}-{hash}
-        restore-keys: docker-layer-caching-${{ github.workflow }}-${{ github.event_name }}-
+        key: docker-layer-caching-${{ github.workflow }}-${{ matrix.os }}-${{ matrix.inspect_image }}-sha:${{ github.sha }}-{hash}
+
+    - run: ${{ matrix.build_command }}
+
+  test_restoring:
+    needs: [build, test_saving]
+    strategy:
+      matrix: ${{ fromJSON(needs.build.outputs.matrix) }}
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - run: ${{ matrix.prepare_command }}
+
+    - uses: satackey/action-docker-layer-caching@master-release
+      with:
+        key: never-restored-docker-layer-caching-${{ github.workflow }}-${{ matrix.os }}-${{ matrix.inspect_image }}-sha:${{ github.sha }}-{hash}
+        restore-keys: docker-layer-caching-${{ github.workflow }}-${{ matrix.os }}-${{ matrix.inspect_image }}-sha:${{ github.sha }}-
+        skip-save: 'true'
+
+    - name: Show cached image info
+      run: docker inspect ${{ matrix.inspect_image }}
 
     - name: Get cached image ID
-      run: echo ::set-output name=id::$(docker image ls -q test_project_node)
+      run: echo ::set-output name=id::$(docker image ls -q ${{ matrix.inspect_image }})
       id: cached
 
-    - run: docker-compose -f test_project/docker-compose.yml -p test_project build
+    - run: ${{ matrix.build_command }}
+
+    - name: Show built image info
+      run: docker inspect ${{ matrix.inspect_image }}
 
     - name: Show built image ID
-      run: echo ::set-output name=id::$(docker image ls -q test_project_node)
+      run: echo ::set-output name=id::$(docker image ls -q ${{ matrix.inspect_image }})
       id: latest
 
     - name: Compare cached ID and after build ID
@@ -55,4 +122,3 @@ jobs:
           echo cached != latest
           exit 1
         fi
-
