--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "dependencies": {
     "@actions/cache": "^1.0.2",
     "@actions/core": "^1.2.6",
+    "@actions/exec": "^1.0.4",
     "@types/recursive-readdir": "^2.2.0",
-    "actions-exec-listener": "^0.0.2",
+    "actions-exec-listener": "0.1.0-beta",
     "crypto": "^1.0.1",
     "native-promise-pool": "^3.15.0",
     "recursive-readdir": "^2.2.2",
