--- a/.github/workflows/test_readme.yml
+++ b/.github/workflows/test_readme.yml
@@ -105,8 +105,7 @@ jobs:
       run: docker inspect ${{ matrix.inspect_image }}
 
     - name: Get cached image ID
-      run: echo ::set-output name=id::$(docker image ls -q ${{ matrix.inspect_image }})
-      id: cached
+      run: echo "CACHED_ID=$(docker image ls -q ${{ matrix.inspect_image }})" >> $GITHUB_ENV
 
     - run: ${{ matrix.build_command }}
 
@@ -114,12 +113,11 @@ jobs:
       run: docker inspect ${{ matrix.inspect_image }}
 
     - name: Show built image ID
-      run: echo ::set-output name=id::$(docker image ls -q ${{ matrix.inspect_image }})
-      id: latest
+      run: echo "LATEST_ID=$(docker image ls -q ${{ matrix.inspect_image }})" >> $GITHUB_ENV
 
     - name: Compare cached ID and after build ID
       run: |
-        if [ ! '${{ steps.cached.outputs.id }}' = '${{ steps.latest.outputs.id }}' ];then
+        if [ ! '${{ env.CACHED_ID }}' = '${{ env.LATEST_ID }}' ];then
           echo cached != latest
           exit 1
         fi
