Change `typescript-is` to `typia`
Unfortunately, `typescript-is` had stopped maintaining, and does not work since TS 4.7 update. However, this package configured `typescript` dependency to `^4.x.x`, therefore it seems dangerous. In such reason, I've changed `typescript-is` to `typia` that is alive.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,7 +63,7 @@
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true, /* Disallow inconsistently-cased references to the same file. */
     "plugins": [
-      { "transform": "typescript-is/lib/transform-inline/transformer" }
+      { "transform": "typia/lib/transform" }
     ]
   },
   "include": [
