--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "native-promise-pool": "^3.16.0",
     "recursive-readdir": "^2.2.2",
     "string-format": "^2.0.0",
-    "typescript-is": "^0.17.1"
+    "typia": "^3.8.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.14",
     "@types/string-format": "^2.0.0",
     "@zeit/ncc": "^0.22.3",
     "ts-node": "^9.1.1",
-    "ttypescript": "^1.5.12",
-    "typescript": "^4.2.3"
+    "ttypescript": "^1.5.15",
+    "typescript": "^4.9.5"
   }
 }
